--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-*.safetensors filter=lfs diff=lfs merge=lfs -text
-gemma-2-9b-0.71540-1.5/adapter_model.safetensors filter=lfs diff=lfs merge=lfs -text
+**.safetensors filter=lfs diff=lfs merge=lfs -text
